sunton_s3_touch_panel/upload_log.txt
Processing esp32-s3-devkitc-1 (platform: espressif32 @ 6.6.0; board: esp32-s3-devkitc-1; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32-s3-devkitc-1.html
PLATFORM: Espressif 32 (6.6.0) > Espressif ESP32-S3-DevKitC-1-N8 (8 MB QD, No PSRAM)
HARDWARE: ESP32S3 240MHz, 320KB RAM, 8MB Flash
DEBUG: Current (esp-builtin) On-board (esp-builtin) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - framework-arduinoespressif32 @ 3.20014.231204 (2.0.14) 
 - tool-esptoolpy @ 1.40501.0 (4.5.1) 
 - tool-mkfatfs @ 2.0.1 
 - tool-mklittlefs @ 1.203.210628 (2.3) 
 - tool-mkspiffs @ 2.230.0 (2.30) 
 - toolchain-riscv32-esp @ 8.4.0+2021r2-patch5 
 - toolchain-xtensa-esp32s3 @ 8.4.0+2021r2-patch5
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 38 compatible libraries
Scanning dependencies...
Dependency Graph
|-- GFX Library for Arduino @ 1.6.0
|-- ArduinoJson @ 6.21.5
|-- lvgl @ 8.3.9
|-- Wire @ 2.0.0
|-- WiFi @ 2.0.0
|-- FS @ 2.0.0
|-- SD @ 2.0.0
|-- SPI @ 2.0.0
|-- NimBLE-Arduino @ 1.4.3
|-- TJpg_Decoder @ 1.1.0
|-- USB @ 2.0.0
Building in release mode
Compiling .pio\build\esp32-s3-devkitc-1\src\main.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_HX8369A.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9225.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9331.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9341.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9342.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9481_18bit.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9486.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9486_18bit.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9488.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9488_18bit.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9488_3bit.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_ILI9806.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_JBT6K71.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_JD9613.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_NT35310.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_NT35510.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_NT39125.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_NV3007.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_NV3023.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_NV3041A.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_OTM8009A.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_R61529.cpp.o
Compiling .pio\build\esp32-s3-devkitc-1\lib638\GFX Library for Arduino\display\Arduino_RGB_Display.cpp.o
src/main.cpp: In function 'void setup()':
src/main.cpp:403:26: error: 'draw_buf' was not declared in this scope
   lv_disp_draw_buf_init(&draw_buf, buf, NULL, screenWidth * 30);
                          ^~~~~~~~
src/main.cpp:403:26: note: suggested alternative: 'swap_buf'
   lv_disp_draw_buf_init(&draw_buf, buf, NULL, screenWidth * 30);
                          ^~~~~~~~
                          swap_buf
src/main.cpp:403:36: error: 'buf' was not declared in this scope
   lv_disp_draw_buf_init(&draw_buf, buf, NULL, screenWidth * 30);
                                    ^~~
src/main.cpp:403:36: note: suggested alternative: 'bus'
   lv_disp_draw_buf_init(&draw_buf, buf, NULL, screenWidth * 30);
                                    ^~~
                                    bus
src/main.cpp:403:47: error: 'screenWidth' was not declared in this scope
   lv_disp_draw_buf_init(&draw_buf, buf, NULL, screenWidth * 30);
                                               ^~~~~~~~~~~
*** [.pio\build\esp32-s3-devkitc-1\src\main.cpp.o] Error 1
========================== [FAILED] Took 7.78 seconds ==========================
